# CodeForge

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .grype.yaml  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.worker  README.md  SECURITY.md  codeforge.example.yaml  codeforge.yaml  codeforge.yaml.example  docker-compose.blue-green.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  litellm_config.yaml  pyproject.toml
.codeforge/microagents/: README.md  commit_helper.md  doc_helper.md  error_helper.md  python_package.md  python_testing.md  security_checker.md  test_helper.md
.codeforge/modes/: README.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  docker-build.yml
cmd/codeforge/: admin.go  main.go  providers.go
configs/: model_pricing.yaml
configs/benchmarks/: README.md  agent-coding.yaml  basic-coding.yaml  e2e-quick.yaml  tool-use-basic.yaml
configs/prometheus/: alerts.yml
docs/: README.md  SECURITY.md  architecture.md  audit-docs-vs-code.md  backend-qa-testplan.md  benchmark-e2e-test-plan.md  code-review-2026-03-05.md  data-retention.md  dev-setup.md  disaster-recovery.md  e2e-test-plan.md  feature-verification-matrix.md  privacy-policy.md  project-status.md  stub-tracker.md  tech-stack.md  todo.md  ux-ui-audit.md
docs/api/: openapi.yaml
docs/audit/: schema-audit-2026-03-07.md  schema-audit-2026-03-18.md
docs/audits/: 2026-03-20-api-contract-audit.md  2026-03-20-audit-overview.md  2026-03-20-docker-infra-audit.md  2026-03-20-frontend-architecture-audit.md  2026-03-20-go-core-service-audit.md  2026-03-20-hybrid-routing-audit.md  2026-03-20-nats-integration-audit.md  2026-03-20-protocol-compliance-audit.md  2026-03-20-python-workers-audit.md  2026-03-20-security-code-level-audit.md  2026-03-20-test-coverage-audit.md  2026-03-22-stub-finder-report.md  2026-03-22-universal-audit-report.md  2026-03-23-universal-audit-report.md  2026-03-23-universal-audit-v2-report.md  2026-03-23-universal-re-audit-report.md  2026-03-26-universal-audit-report.md  2026-03-27-universal-audit-report.md  agent-prompt-system-audit.md  config-env-audit.md  full-feature-audit-2026-03-21.md
docs/features/: 01-project-dashboard.md  02-roadmap-feature-map.md  03-multi-llm-provider.md  04-agent-orchestration.md  05-chat-enhancements.md  06-visual-design-canvas.md  07-chat-first-orchestrator.md
docs/plans/: 2026-03-07-unified-llm-path-plan.md  2026-03-08-dashboard-polish-design.md  2026-03-08-dashboard-polish-plan.md  2026-03-08-integration-testing-design.md  2026-03-08-integration-testing-plan.md  2026-03-08-mobile-responsive-plan.md  2026-03-09-adaptive-context-injection.md  2026-03-09-agent-eval-improvements-plan.md  2026-03-09-auto-agent-skills-plan.md  2026-03-09-benchmark-external-providers-plan.md  2026-03-09-chat-enhancements-plan.md  2026-03-09-e2e-findings-fix.md  2026-03-09-feature-activation-sweep-plan.md  2026-03-09-feature-roadmap-todos-plan.md  2026-03-09-goal-system-redesign-impl.md  2026-03-09-goal-system-redesign-plan.md  2026-03-09-playwright-mcp-smoke-test.md  2026-03-09-project-workflow-impl-plan.md  2026-03-09-project-workflow-plan.md  2026-03-09-remaining-todos-plan.md  2026-03-10-benchmark-live-feed-plan.md  2026-03-11-benchmark-findings-fixes-plan.md  2026-03-15-contract-first-review-refactor-plan.md  2026-03-16-benchmark-live-feed-improvements-plan.md  2026-03-17-interactive-qa-report.md  2026-03-17-interactive-qa-testplan.md  2026-03-18-claude-code-integration-plan.md  2026-03-18-db-audit-remediation-plan.md  2026-03-18-docs-reorganization-plan.md  2026-03-18-full-service-interactive-qa-testplan.md  2026-03-18-ux-ui-audit-fixes-plan.md  2026-03-19-frontend-ui-fixes-plan.md  2026-03-20-benchmark-e2e-fixes-plan.md  2026-03-20-comprehensive-audit-plan.md  2026-03-21-feature-audit-fixes.md  2026-03-21-frontend-unit-tests-plan.md  2026-03-21-refactor-api-client-plan.md  2026-03-21-refactor-chatpanel-plan.md  2026-03-21-refactor-settingspage-plan.md  2026-03-21-remaining-audit-findings-plan.md  (+70 more)
docs/prompts/: claude-code-feature-discovery-report.md  claude-code-feature-discovery.md  codeforge-unwired-features-report.md  doc-audit.md  strategic-advisor.md  stub-finder.md  universal-audit.md
docs/research/: aider-deep-analysis.md  market-analysis.md  protocol-analysis.md
docs/security/: breach-notification-procedure.md  data-classification.md
docs/specs/: 2026-03-08-mobile-responsive-design.md  2026-03-09-auto-agent-skills-design.md  2026-03-09-benchmark-external-providers-design.md  2026-03-09-chat-enhancements-design.md  2026-03-09-goal-system-redesign-design.md  2026-03-09-project-workflow-redesign-design.md  2026-03-10-benchmark-live-feed-design.md  2026-03-11-benchmark-validation-design.md  2026-03-15-contract-first-review-refactor-design.md  2026-03-16-benchmark-live-feed-density-design.md  2026-03-18-ux-ui-audit-fixes-design.md  2026-03-19-frontend-ui-fixes-design.md  2026-03-20-agent-prompt-harmonization-design.md  2026-03-20-comprehensive-audit-plan-design.md  2026-03-20-s2-report-recommendations-design.md  2026-03-22-weak-model-adaptation-design.md  2026-03-23-audit-remediation-design.md  2026-03-23-knowledge-integration-design.md  2026-03-23-knowledge-pipeline-design.md  v2-api-migration-design.md
frontend/: .gitignore  e2e-browser-test.py  e2e-full-test.py  e2e-mcp-full-test.py  e2e-mcp-test.py  e2e-mcp-test.sh  e2e-test-driver.py  eslint.config.js  index.html  lighthouserc.yaml  nginx.conf  node_modules  package-lock.json  package.json  playwright.config.ts  playwright.e2e-manual.config.ts  playwright.llm.config.ts  tsconfig.json  vite.config.ts
litellm/: config.yaml
scripts/: backup-postgres.sh  cleanup-wal-archives.sh  deploy-blue-green.sh  generate-secrets.sh  logs.sh  resolve-docker-ips.sh  restore-postgres.sh  run-agent-eval.sh  setup-branch-protection.sh  sync-version.sh  test.sh  validate-env.sh  verify-features.sh  worker-healthcheck.py
tools/: db_schema_audit.py  db_schema_audit_test.py
traefik/: traefik.yaml
(+1874 files in other folders)
